<resources>
    <string name="app_name">Future Love</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="photos">Photos</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name_desc">Lorem ipsum dolor sit amet consectetur. \nLacus pulvinar vitae tempor</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="ask_reset_password">Do you want to reset password?</string>
    <string name="ask_having_account">Don’t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="event_detail">Our first date was a mix of nervousness and excitement. We shared stories</string>
</resources>